ServerS/src/main/java/cn/edu/nuaa/little1/grammer/CSV.g4
grammar CSV;

file : hdr row+;
hdr : row;
row : field (',' field)* '\r'? '\n';

field
    : TEXT # text
    | STRING # string
    | # empty
    ;

//field
//    : TEXT   # text
//    | STRING # string
//    |        # empty
//    ;

TEXT : ~[,\n\r"]+ ;
STRING : '"' ('""'|~'"')* '"';
